smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/dangling-with.smithy
// Parse error at line 5, column 1 near ``: Expected a valid identifier character, but found ''
namespace com.foo

structure Foo with
